--- a/Myself.html
+++ b/Myself.html
@@ -39,6 +39,9 @@
 		<option value="playing football">Playing Football</option>
 	</select>
 	</center>
+	<a style="color: white;"  href="Resume AM.html"><p style="text-align:center">Back</a></p>
+	<br>
+	<br>
 	<a style="color: white;"  href="Home.html"><p style="text-align:center">Back</a></p>
 </form>
 </body>
