--- a/Myself.html
+++ b/Myself.html
@@ -39,8 +39,7 @@
 		<option value="playing football">Playing Football</option>
 	</select>
 	</center>
-	<a style="color: white;"  href="Resume AM.html"><p style="text-align:center">Back</a></p>
-	<br>
+	<a style="color: white;"  href="Resume AM.html"><p style="text-align:center">Resume</a></p>
 	<br>
 	<a style="color: white;"  href="Home.html"><p style="text-align:center">Back</a></p>
 </form>
