--- a/Resume AM.html
+++ b/Resume AM.html
@@ -5,7 +5,7 @@
 	</style>
 </head>
 <body background="Blue Minimalist Architecture Desktop Wallpaper.png"></body>
-	<img align="right" src="file:///C:/Users/Gene/Pictures/Saved%20Pictures/1x1/Gello.jpg" style="width:200px;height:200px;">
+	<img align="right" src="Gello.png" style="width:200px;height:200px;">
 	<h3>Medina, Angelo D. </h3>	
 	<p>528 General Yengco St, Medicion 1c City of Imus, Cavite</p>
 	<p>angelo.medina506@gmail.com</p>
