--- a/Achievements.html
+++ b/Achievements.html
@@ -8,12 +8,12 @@
 	<h4>Academics</h4>
 	<ol style="list-style-type: lower-alpha;">
 	<li>Academic Awardee</li>
-	<img src="file:///C:/Users/Gene/Pictures/Saved%20Pictures/gold%20card.jpg" style="width:200px;height:200px;">
+	<img src="gold card.png" style="width:200px;height:200px;">
 	</ol>
 	<h4>Organization</h4>
 	<ol style="list-style-type: upper-alpha;">
 	<li>OLPCS Football Varsity</li>
-	<img src="file:///C:/Users/Gene/Pictures/Saved%20Pictures/football.jpg" style="width:200px;height:200px;">
+	<img src="football.png" style="width:200px;height:200px;">
 	</ol>
 	<hr>
 	<a href="Resume AM.html">Back</a>
